<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_60ssp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_bg_rateUs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/moving_light" />

    <RelativeLayout
        android:layout_marginTop="@dimen/_80ssp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/_60ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_23ssp"
            android:background="@drawable/rounded_dialog_bg"
            android:orientation="vertical">

            <com.iambedant.text.OutlineTextView
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50ssp"
                android:text="@string/rateApp"
                android:textColor="@color/light_yellow"
                android:textSize="@dimen/_12ssp"
                app:outlineColor="@color/black"
                app:outlineWidth="0.5" />

            <RelativeLayout
                android:id="@+id/card_rateUs"
                style="@style/buttonStyle"
                android:layout_marginVertical="@dimen/_10ssp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_margin="@dimen/_2ssp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_bg" />

                <TextView
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/rateUs" />


            </RelativeLayout>

            <TextView
                android:id="@+id/later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10ssp"
                android:fontFamily="@font/itim"
                android:text="@string/later" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative_image_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@android:color/transparent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_20ssp"
                android:scaleType="fitXY"
                android:src="@drawable/dialog_header" />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>