<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_home"
    tools:context=".Activities.MixEmojiActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/emojiRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_55ssp"
        android:layout_marginHorizontal="@dimen/_10ssp"
        android:padding="@dimen/_5ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_merge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_emoji"
        app:layout_constraintVertical_bias="0.205" />

    <RelativeLayout
        android:id="@+id/relative_back"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_15ssp"
        android:background="@drawable/stroked_button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/_6ssp"
            android:src="@drawable/back_btn" />
    </RelativeLayout>

    <com.iambedant.text.OutlineTextView
        android:id="@+id/title_emoji"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:text="@string/mixEmojis"
        android:textColor="@color/light_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:outlineColor="@color/black"
        app:outlineWidth="1" />

    <RelativeLayout
        android:id="@+id/relative_emojis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_emoji">

        <RelativeLayout
            android:id="@+id/relative_emoji1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp">

            <ImageView
                android:id="@+id/bg_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emoji_bg" />

            <ImageView
                android:id="@+id/emoji1_img"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <com.iambedant.text.OutlineTextView
            android:id="@+id/add_img"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_toEndOf="@+id/relative_emoji1"
            android:text="@string/add"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/_30ssp"
            app:outlineColor="@color/black"
            app:outlineWidth="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_toEndOf="@+id/add_img">

            <ImageView
                android:id="@+id/bg_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emoji_bg" />

            <ImageView
                android:id="@+id/emoji2_img"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progress_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/dark_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/btn_merge"
        style="@style/buttonStyle"
        android:layout_marginVertical="@dimen/_40ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <!-- Text: Collection -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/btn_bg" />

        <TextView
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/merge" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_RV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>